--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="inner">
 
         <header>
-          <h1>Ballin-octo-ninja</h1>
+          <h1>Ballin-octo-ninja (who is actually like Zoro, but better)</h1>
           <h2>Real life. </h2>
         </header>
 
